pandoc-citeproc (0.17.0.1)

  * Allow aeson 1.5 (#452, Felix Yan).
  * Fix infinite loop when compiled with `embed_data_files` flag (#450).
    This arose when locale specified an unknown locale.
  * Allow pandoc-types 1.21.

pandoc-citeproc (0.17)

  * Only print labels if selected variable is non-empty (#437).
  * Make reference-section-title work even when doc ends with header (#431).
    Previously, setting `reference-section-title` wouldn't do anything
    when the document ended with a header -- contrary to what the
    documentation suggests.
  * Use Text instead of String (#430, Albert Krewinkel).

pandoc-citeproc (0.16.4.1)

  * Allow pandoc 2.9.

pandoc-citeproc (0.16.4)

  * Simplify compat since we now require pandoc >= 2.8.
  * Update man page.  Clarify that `reference-section-title` doesn't have any
    effect when an explicit Div is used (#424).
  * Qualify fail with Prelude to fix compiler warnings.
  * Disable `raw_attribute` extension when writing Markdown.
    This way we avoid e.g. `<i>{=html}` in the CSL export.
  * Use pandoc-types 1.20.  Note that this change removes
    the ability to compile pandoc-citeproc with
    older versions of pandoc (< 2.8).
  * Incorporate the switch to Text in the dependencies (Christian
    Despres).  The changes to the structure of the code are fairly minimal.
    None of the types have changed, requiring a reasonable amount of
    packing, unpacking, and view patterns.

pandoc-citeproc (0.16.3.1)

  * Fix how LANG is set for bibtex conversion.
    We were using a `-` where `_` is standard.
  * Make locale retrieval more robust (#420).
    Previously an error was raised if the locale was 'C'.
    Now 'C' is treated as default (en-US locale is used).

pandoc-citeproc (0.16.3)

  * Set `hanging-indent` class on `refs` Div if specified by the style (#410).
    This depends on whether the `hanging-indent` attribute of
    `<bibliography>` is true.
  * Update chicago-author-date.csl and locales.