@@ -45,7 +45,7 @@
     <term name="interview">intervju</term>
     <term name="letter">brev</term>
     <term name="no date">ingen dato</term>
-    <term name="no date" form="short">udatert</term>
+    <term name="no date" form="short">u.å.</term>
     <term name="online">online</term>
     <term name="presented at">presentert på</term>
     <term name="reference">
