@@ -14,7 +14,7 @@
   <date form="text">
     <date-part name="day" form="numeric" suffix=". "/>
     <date-part name="month" suffix=" "/>
-    <date-part name="year" suffix="."/>
+    <date-part name="year"/>
   </date>
   <date form="numeric">
     <date-part name="day" form="numeric" suffix=". "/>
@@ -40,7 +40,7 @@
     <term name="edition" form="short">izd.</term>
     <term name="et-al">idr.</term>
     <term name="forthcoming">pred izidom</term>
-    <term name="from">od</term>
+    <term name="from">s</term>
     <term name="ibid">isto</term>
     <term name="in">v</term>
     <term name="in press">v tisku</term>
