@@ -1,6 +1,6 @@
 cabal-version:      1.12
 name:               pandoc-citeproc
-version:            0.17.0.1
+version:            0.17.0.2
 synopsis:           Supports using pandoc with citeproc
 
 description:        The pandoc-citeproc library supports automatic
